<resources>
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">iMath</string>
    <string name="nav_header_subtitle">Funciones matemáticas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Ayuda</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_hipotenusa">Calcular hipotenusa</string>
    <string name="menu_cateto_a">Calcular cateto A</string>
    <string name="menu_cateto_b">Calcular cateto B</string>

    <string name="menu_grados">Convertir grados</string>
    <string name="menu_minutos">Convertir minutos</string>
    <string name="menu_segundos">Convertir segundos</string>
    <string name="menu_combinados">Convertir combinados</string>
    <string name="menu_grados_to_gms">Convertir grados a G/M/S</string>
    <string name="menu_grados_to_radianes">Convertir grados a radianes</string>
    <string name="menu_gms_to_radianes">Convertir G/M/S a radianes</string>
    <string name="menu_suma_angulos">Sumar ángulos</string>
    <string name="menu_resta_angulos">Restar ángulos</string>
    <string name="menu_multiplicar_angulos">Multiplicar ángulos</string>
    <string name="menu_dividir_angulos">Dividir ángulos</string>

    <string name="menu_help">Ayuda</string>

    <string name="btn_area">Calcular área</string>
    <string name="btn_perimetro">Calcular perímetro</string>
    <string name="btn_volumen">Calcular volumen</string>
    <string name="btn_grados">Calcular grados</string>
    <string name="btn_minutos">Calcular minutos</string>
    <string name="btn_segundos">Calcular segundos</string>
    <string name="btn_calcular">Realizar operación</string>
    <string name="btn_borrar">Borrar</string>
    <string name="pst_area">Área</string>
    <string name="pst_volumen">Volumen</string>
    <string name="pst_perimetro">Perímetro</string>

    <string name="help">Ayuda</string>

</resources>