<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.square.SquareFragment">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/tabhost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#C4D4EB" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@android:id/tabcontent">

                <!-- PERÍMETRO -->
                <LinearLayout
                    android:id="@+id/pest1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/fondo_dise">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/ic_square"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/instruccion"
                            android:layout_width="260dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="30dp"
                            android:fontFamily="sans-serif-black"
                            android:text="Ingresa todos los datos solicitados de forma correcta y completa"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.496"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView" />

                        <EditText
                            android:id="@+id/txtLadoPerimetro"
                            android:layout_width="200dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="30dp"
                            android:ems="10"
                            android:hint="* Valor del lado"
                            android:inputType="numberDecimal"
                            android:textAlignment="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/instruccion" />

                        <Button
                            android:id="@+id/btnCalcularPerimetro"
                            android:layout_width="@dimen/btn_width"
                            android:layout_height="60dp"
                            android:layout_marginTop="18dp"
                            android:layout_marginEnd="30dp"
                            android:drawableLeft="@drawable/ic_calculate"
                            android:text="Calcular"
                            android:tooltipText="@string/btn_perimetro"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/unidadPerimetro" />

                        <Button
                            android:id="@+id/btnBorrarPerimetro"
                            android:layout_width="@dimen/btn_width"
                            android:layout_height="60dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="18dp"
                            android:drawableLeft="@drawable/ic_delete"
                            android:text="Borrar"
                            android:tooltipText="@string/btn_borrar"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/unidadPerimetro" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="Resultado"
                            android:textAlignment="center"
                            android:textColor="#ae326a"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/btnBorrarPerimetro" />

                        <TextView
                            android:id="@+id/tvPerimetro"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="15dp"
                            android:text=""
                            android:textAlignment="center"
                            android:textColor="#ae326a"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.495"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView2" />

                        <Spinner
                            android:id="@+id/unidadPerimetro"
                            android:layout_width="170dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="25dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtLadoPerimetro" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <!-- ÁREA -->
                <LinearLayout
                    android:id="@+id/pest2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/fondo_dise"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/ic_square"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/instruccion2"
                            android:layout_width="260dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="30dp"
                            android:fontFamily="sans-serif-black"
                            android:text="Ingresa todos los datos solicitados de forma correcta y completa"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.496"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                        <EditText
                            android:id="@+id/txtLadoArea"
                            android:layout_width="200dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="30dp"
                            android:ems="10"
                            android:hint="* Valor del lado"
                            android:inputType="numberDecimal"
                            android:textAlignment="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/instruccion2" />

                        <Button
                            android:id="@+id/btnCalcularArea"
                            android:layout_width="@dimen/btn_width"
                            android:layout_height="60dp"
                            android:layout_marginTop="18dp"
                            android:layout_marginEnd="30dp"
                            android:drawableLeft="@drawable/ic_calculate"
                            android:text="Calcular"
                            android:tooltipText="@string/btn_area"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/unidadArea" />

                        <Button
                            android:id="@+id/btnBorrarArea"
                            android:layout_width="@dimen/btn_width"
                            android:layout_height="60dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="18dp"
                            android:drawableLeft="@drawable/ic_delete"
                            android:tooltipText="@string/btn_borrar"
                            android:text="Borrar"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/unidadArea" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="Resultado"
                            android:textAlignment="center"
                            android:textColor="#ae326a"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/btnBorrarArea" />

                        <TextView
                            android:id="@+id/tvArea"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="15dp"
                            android:text=""
                            android:textAlignment="center"
                            android:textColor="#ae326a"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.495"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <Spinner
                            android:id="@+id/unidadArea"
                            android:layout_width="170dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="25dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtLadoArea" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </TabHost>

</LinearLayout>
